--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,18 +15,31 @@
   ],
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "hardhat test"
   },
   "dependencies": {
     "@account-abstraction/contracts": "0.5.0",
     "@ethersproject/abstract-provider": "^5.7.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.14.6",
+    "@types/yargs": "^16.0.1",
+    "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "eslint-config-custom": "workspace:*",
+    "hardhat": "^2.12.6",
+    "hardhat-deploy": "^0.11.25",
     "tsconfig": "workspace:*",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "yargs": "^17.7.1"
   },
   "publishConfig": {
     "access": "public"
