--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": ["INFURA_KEY", "MNEMONIC", "PK"],
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
