--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -22,11 +22,17 @@
     "@account-abstraction/contracts": "0.5.0",
     "@ethersproject/abstract-provider": "^5.7.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@openzeppelin/contracts": "^4.8.2",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.6",
@@ -38,6 +44,7 @@
     "hardhat": "^2.12.6",
     "hardhat-deploy": "^0.11.25",
     "tsconfig": "workspace:*",
+    "typechain": "^8.1.0",
     "typescript": "^4.9.4",
     "yargs": "^17.7.1"
   },
