Add new contracts, compiled contract typings

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -6,7 +6,8 @@
   "extends": "tsconfig/node14.json",
   "include": [
     "src",
-    "src/**/*.json"
+    "src/**/*.json",
+    "types"
   ],
   "exclude": [
     "dist",
