--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -23,7 +23,8 @@
     "@ethersproject/abstract-provider": "^5.7.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "web3-utils": "^1.8.2"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
