--- a/examples/with-next/package.json
+++ b/examples/with-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-next",
+  "name": "@accountjs/with-next-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@accountjs/connect": "workspace:*",
+    "@accountjs/sdk": "workspace:*",
     "ethers": "^5",
     "next": "13.2.4",
     "react": "18.2.0",
