--- a/packages/connectkit/package.json
+++ b/packages/connectkit/package.json
@@ -30,22 +30,28 @@
     "@accountjs/sdk": "workspace:*",
     "@accountjs/service-client": "workspace:*",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e"
+    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
+    "ethers": "^5.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "wagmi": "0.12.6"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
-    "esbuild": "^0.17.11",
+    "esbuild": "^0.17.12",
     "esbuild-style-plugin": "^1.6.1",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.1",
     "tailwindcss": "^3.2.7",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "^4.9.5"
   },
   "resolutions": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "wagmi": "^0.12.0"
+    "wagmi": "0.12.x"
   }
 }
