--- a/examples/with-private-recovery/package.json
+++ b/examples/with-private-recovery/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@accountjs/connect": "workspace:*",
     "@accountjs/sdk": "workspace:*",
+    "@geist-ui/core": "^2.3.8",
     "circomlibjs": "^0.0.8",
     "clsx": "^1.2.1",
     "ethers": "^5.7.2",
@@ -20,8 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-event-hook": "^0.9.6",
-    "snarkjs": "^0.6.10",
-    "wagmi": "^0.12.1"
+    "snarkjs": "^0.5.0",
+    "wagmi": "0.12.6"
   },
   "devDependencies": {
     "@types/node": "^18.15.7",
