--- a/packages/connectkit/package.json
+++ b/packages/connectkit/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "node build.js",
     "build:watch": "node build.js --watch",
-    "dev": "pnpm build:watch & pnpm typegen:watch & pnpm css:watch",
+    "dev": "run-p build:watch typegen:watch css:watch",
     "prepare": "pnpm build",
     "prebuild": "pnpm typegen",
     "typecheck": "pnpm tsc --noEmit",
@@ -43,6 +43,7 @@
     "esbuild": "^0.17.12",
     "esbuild-style-plugin": "^1.6.1",
     "eslint-config-custom": "workspace:*",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.1",
     "tailwindcss": "^3.2.7",
